--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ font-size: 19px;">
         <div>
             <hr>
             <article class="title">  
-                <h1><i>Harris’s Debate Challenge: Pushing Ahead Without Leaving Biden Behind</i></h1>
+                <h2><i>Harris’s Debate Challenge: Pushing Ahead Without Leaving Biden Behind</i></h2>
                 <p>At Tuesday’s debate, Kamala Harris, the vice president, will try to promote herself as a change candidate without criticizing President Biden,
                  whom she has served for years.</p>
             </article>
@@ -46,7 +46,7 @@ font-size: 19px;">
                 <img src="src/post1img1.webp" alt="debate-photo" style="width: 100%;">
                 Advisers to Vice President Kamala Harris say she has introduced some policies that 
                 they hope will appeal to voters, and strike a subtle contrast with President 
-                Biden.Credit...Tierney L. Cross for The New York Times
+                Biden. Credit...Tierney L. Cross for The New York Times
              </div>
             
             <div class="item-info" style="display: flex; max-height: 10em; margin: 10px;">
@@ -54,7 +54,9 @@ font-size: 19px;">
                 <img src="src/author1.png" style="max-width: 3em; max-height: 3em; margin-right: 25px;" alt="author-image">
                 <h3>By <a href="#" style="color: #f5f6f7;" >Katie Rogers</a></h3>
             </div>
+
             <article>
+                <h3>Debate Details</h3>
                 <p>
                     Vice President Kamala Harris will try to use her debate on Tuesday against 
                     former President Donald J. Trump to argue that Americans are ready to turn 
@@ -77,9 +79,10 @@ font-size: 19px;">
                 </p>
             </article>
             
+            <iframe width="900" height="500" src="https://www.youtube.com/embed/8LNbaDVTeKo?si=PXzZzCdgsTsCbA7V" title="YouTube video player" style="border: 0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <iframe width="100%" height="500px" src="https://www.youtube.com/embed/8LNbaDVTeKo?si=PXzZzCdgsTsCbA7V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <article>
+                <h3>Final Thoughts</h3>
                 <p>“She can praise Biden and talk about the accomplishments, but also acknowledge that the work is not done,” said Bakari Sellers, an ally 
                     of Ms. Harris and a Democratic political commentator. “So she has to be willing 
                     to display to the American people a level of empathy and understanding, and not simply say everything we did was God’s gift to politics.”
