--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Registration</title>
-  </head>
-  <body style="width: 100%;
+   <head>
+      <meta charset="UTF-8">
+      <title>Registration</title>
+   </head>
+   <body style="width: 100%;
       height: 100vh;
       margin: 0;
       background-color: #383c6a;
@@ -12,74 +12,86 @@
       font-family: Tahoma;
       text-align: center;
       font-size: 19px;">
-
-<header style="max-height: 20em;">
-  <!-- Navigation -->
-  <nav style=" margin: 0 auto; max-width: 50em;">
-      <ul style="display: flex; justify-content: space-between; margin: 2em;  list-style-type: none;">
-          <li><a href="./index.html" style="color: #f5f6f7;">Home</a></li>
-          <li><a href="./aboutus.html" style="color: #f5f6f7;">About us</a></li>
-          <li><a href="./login.html" style="color: #f5f6f7;">Log in</a></li>
-          <li><a href="./signup.html" style="color: #f5f6f7; background-color: #7b024f; padding: 5px;">Sign up</a></li>
-          <li><select id="language-select">
-              <option value="english">English</option>
-              <option value="kazakh">Қазақша</option>
-              <option value="russian">Русский</option>
-          </select></li>
-      </ul>
-  </nav>
-</header>
-    <section style="max-width: 15em; margin: 0 auto; font-size: 25px;">
-      <h1>Registration Form</h1>
-      <p>Please fill out this form with the required information</p>
-      <form method="post" action='' enctype="multipart/form-data">
-        <fieldset>
-          <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required />
-          </label>
-          <br>
-          <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required />
-          </label>
-          <br>
-          <label for="email">Enter Your Email: <input id="email" name="email" type="email" placeholder="example@gmail.com" required />
-          </label>
-          <br>
-          <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required />
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend>Account type (required)</legend>
-          <label for="personal-account">
-            <input id="personal-account" type="radio" name="account-type" class="inline" checked /> Personal </label>
-          <br>
-          <label for="business-account">
-            <input id="business-account" type="radio" name="account-type" class="inline" /> Business </label>
-          <br>
-        </fieldset>
-        <fieldset>
-          <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" name="file" accept="image/*" />
-          </label>
-          <br>
-          <label for="age">Input your age (years): <input id="age" type="number" name="age" min="13" max="120" />
-          </label>
-          <br>
-          <label for="referrer"> How did you hear about us? <select id="referrer" name="referrer">
-              <option value="">(select one)</option>
-              <option value="1">News</option>
-              <option value="2">YouTube</option>
-              <option value="3">Forums</option>
-              <option value="4">Other</option>
-            </select>
-          </label>
-          <br>
-          <label for="bio">Provide a bio: <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
-          </label>
-        </fieldset>
-        <label for="terms-and-conditions">
-          <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a style="color: #f5f6f7;" href="#">terms and conditions</a>
-        </label>
-        <br>
-        <input type="submit" value="Submit" />
-      </form>
-    </section>
-  </body>
+      <header style="max-height: 20em;">
+         <!-- Navigation -->
+         <nav style=" margin: 0 auto; max-width: 50em;">
+            <ul style="display: flex; justify-content: space-between; margin: 2em; list-style-type: none;">
+               <li><a href="./index.html" style="color: #f5f6f7;">Home</a></li>
+               <li><a href="./aboutus.html" style="color: #f5f6f7;">About us</a></li>
+               <li><a href="./login.html" style="color: #f5f6f7;">Log in</a></li>
+               <li><a href="./signup.html" style="color: #f5f6f7; background-color: #7b024f; padding: 5px;">Sign up</a></li>
+               <li>
+                  <select id="language-select">
+                     <option value="english">English</option>
+                     <option value="kazakh">Қазақша</option>
+                     <option value="russian">Русский</option>
+                  </select>
+               </li>
+            </ul>
+         </nav>
+      </header>
+      <section style="max-width: 15em; margin: 0 auto; font-size: 25px;">
+         <h1>Registration Form</h1>
+         <p>Please fill out this form with the required information</p>
+         <form method="post" action="#" enctype="multipart/form-data">
+            <fieldset>
+               <label for="first-name">Enter Your First Name: 
+               <input id="first-name" name="first-name" type="text" required>
+               </label>
+               <br>
+               <label for="last-name">Enter Your Last Name: 
+               <input id="last-name" name="last-name" type="text" required>
+               </label>
+               <br>
+               <label for="email">Enter Your Email: 
+               <input id="email" name="email" type="email" placeholder="example@gmail.com" required>
+               </label>
+               <br>
+               <label for="new-password">Create a New Password: 
+               <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required>
+               </label>
+            </fieldset>
+            <fieldset>
+               <legend>Account type (required)</legend>
+               <label for="personal-account">
+               <input id="personal-account" type="radio" name="account-type" class="inline" checked> Personal
+               </label>
+               <br>
+               <label for="business-account">
+               <input id="business-account" type="radio" name="account-type" class="inline"> Business
+               </label>
+               <br>
+            </fieldset>
+            <fieldset>
+               <label for="profile-picture">Upload a profile picture: 
+               <input id="profile-picture" type="file" name="file" accept="image/*">
+               </label>
+               <br>
+               <label for="age">Input your age (years): 
+               <input id="age" type="number" name="age" min="13" max="120">
+               </label>
+               <br>
+               <label for="referrer">
+                  How did you hear about us? 
+                  <select id="referrer" name="referrer">
+                     <option value="">(select one)</option>
+                     <option value="1">News</option>
+                     <option value="2">YouTube</option>
+                     <option value="3">Forums</option>
+                     <option value="4">Other</option>
+                  </select>
+               </label>
+               <br>
+               <label for="bio">Provide a bio: 
+               <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
+               </label>
+            </fieldset>
+            <label for="terms-and-conditions">
+            <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions"> I accept the <a style="color: #f5f6f7;" href="#">terms and conditions</a>
+            </label>
+            <br>
+            <input type="submit" value="Submit">
+         </form>
+      </section>
+   </body>
 </html>
