--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </nav>
-               <div class="header__title py-xxl-5 py-md-3 py-sm-0">
+               <div class="header__title">
                     <h1>THE NEWS</h1>
                </div>
             </div>
@@ -73,7 +73,7 @@
                         <div class="col-12 col-lg-6 col-md-12 mb-4">
                             
                             <div class="card vertical-card w-100">
-                                <a href="#">
+                                <a href="./post-detail.html">
                                     <img src="./img/recent1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title card-text-title">Card title</h5>
