--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </nav>
-               <div class="header__title py-xxl-5 py-md-3 py-sm-0">
+               <div class="header__title">
                     <h1>THE NEWS</h1>
                </div>
             </div>
