--- a/post-detail.html
+++ b/post-detail.html
@@ -142,7 +142,44 @@
                         
                             </div>
                         </div>
-                        <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-xs-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-xs-12">
+                            <div class="row recent-title">
+                                <h2>It's a post title</h2>
+                            </div>
+
+                            <div class="col-12 my-3">
+                                <img src="./img/project1.jpg" class="img-fluid">
+                            </div>
+
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum enim dolores repellendus delectus ab molestiae vitae laborum fugit maxime 
+                            aliquam itaque sunt facilis illo ea quas in laudantium, quidem magni ut, rerum, 
+                            asperiores recusandae nisi corrupti odio. Repudiandae facere vitae minima enim 
+                            ipsam neque obcaecati, numquam maiores cum quaerat quo est id recusandae itaque 
+                            nobis voluptatem odit similique excepturi quis placeat sit veritatis? Dolores, voluptates
+                             accusantium, qui rem laboriosam iusto sit voluptatem, non doloribus necessitatibus nisi 
+                             alias neque vero nemo! Molestias aperiam assumenda officia sapiente rerum, 
+                            labore odit suscipit quo eveniet incidunt quod, nam fuga distinctio debitis! Pariatur, consequatur cum.
+
+                            <div class="col-12 my-3">
+                                <img src="./img/project2.jpg" class="img-fluid">
+                            </div>
+
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum enim dolores repellendus delectus ab molestiae vitae laborum fugit maxime 
+                            aliquam itaque sunt facilis illo ea quas in laudantium, quidem magni ut, rerum, 
+                            asperiores recusandae nisi corrupti odio. Repudiandae facere vitae minima enim 
+                            ipsam neque obcaecati, numquam maiores cum quaerat quo est id recusandae itaque 
+                            nobis voluptatem odit similique excepturi quis placeat sit veritatis? Dolores, voluptates
+                             accusantium, qui rem laboriosam iusto sit voluptatem, non doloribus necessitatibus nisi 
+                             alias neque vero nemo! Molestias aperiam assumenda officia sapiente rerum, 
+                            labore odit suscipit quo eveniet incidunt quod, nam fuga distinctio debitis! Pariatur, consequatur cum.
+
+                            <div class="col-12 my-3">
+                                <img src="./img/project3.jpg" class="img-fluid">
+                            </div>
+
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Eum enim dolores repellendus delectus ab molestiae vitae laborum fugit maxime 
                             aliquam itaque sunt facilis illo ea quas in laudantium, quidem magni ut, rerum, 
                             asperiores recusandae nisi corrupti odio. Repudiandae facere vitae minima enim 
