--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container fixed-top bg-body py-3 px-4">
                     <div class="navbar-brand userinfo">
-                        <a href="#" class="userinfo__name">Client name</a>
+                        <a href="#" class="userinfo__name hidden">Client name</a>
+                        <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
                     </div>
             
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
