--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
                             <li class="nav-item">
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" id="darkmode-toggle">
-                                    <label class="toggle-mode">
-                                        <input type="checkbox" id="darkmode-toggle">
-                                        <label for="darkmode-toggle"></label>
+                                    <label class="toggle-mode" for="darkmode-toggle">
                                         <span class="slider"></span>
                                     </label>
                                 </div>
+                                
                             </li>
                         </ul>
                     </div>
@@ -322,7 +321,7 @@
 
 
     </div>
-
+<script src="./scripts/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
