--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             
                     <div class="collapse navbar-collapse" id="navbarContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item d-flex align-items-center" style="padding-right: 50px;">
+                                <div id="date-time"></div>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">News</a>
                             </li>
@@ -56,7 +59,7 @@
                 </div>
             </nav>
                <div class="header__title">
-                    <h1>THE NEWS</h1>
+                    <h1>THE BLOG</h1>
                </div>
             </div>
 
