--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <div id="date-time"></div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">News</a>
+                                    <a class="nav-link active" aria-current="page" href="./index.html">News</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./projects.html">Projects</a>
