--- a/post-detail.html
+++ b/post-detail.html
@@ -31,8 +31,11 @@
                 
                         <div class="collapse navbar-collapse" id="navbarContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item d-flex align-items-center" style="padding-right: 50px;">
+                                    <div id="date-time"></div>
+                                </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">News</a>
+                                    <a class="nav-link active" aria-current="page" href="./index.html">News</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./projects.html">Projects</a>
