--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="header__container container">
 
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container fixed-top bg-body py-3 px-4">
+                    <div class="container fixed-top py-3 px-4">
                         <div class="navbar-brand userinfo">
                             <a href="#" class="userinfo__name hidden">Client name</a>
                             <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
@@ -302,11 +302,11 @@
             </main>
             
 
-            <footer class="footer bg-body py-4" id="footer">
+            <footer class="footer py-4" id="footer">
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-auto">
-                            <span class="text-muted">© 2023 Sheri Nurislam</span>
+                            <span>© 2023 Sheri Nurislam</span>
                         </div>
                         <div class="col-auto">
                             <ul class="list-unstyled d-flex mb-0">
