--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
                                     <div id="date-time"></div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">News</a>
+                                    <a class="nav-link" aria-current="page" href="./index.html">News</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./projects.html">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./about.html">About</a>
+                                    <a class="nav-link active" href="./about.html">About</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Newsletter</a>
