--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                                     <div id="date-time"></div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">News</a>
+                                    <a class="nav-link" aria-current="page" href="./index.html">News</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./projects.html">Projects</a>
