--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,10 @@
                                     <div id="date-time"></div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">News</a>
+                                    <a class="nav-link" aria-current="page" href="./index.html">News</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./projects.html">Projects</a>
+                                    <a class="nav-link active" href="./projects.html">Projects</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./about.html">About</a>
