--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
                     </div>
                 </nav>
                <div class="header__title">
-                    <h1>THE NEWS</h1>
+                    <h1>LOG IN</h1>
                </div>
             </div>
 
@@ -78,8 +78,8 @@
 
                                 <label for="password">Password:</label>
                                 <input type="password" id="password" name="password"><br><br>
-                        
-                                <input type="submit" value="Submit">
+                                <input type="submit" value="Submit"  class="btn btn-primary">
+                                <input type="button" value="Clear"  class="btn btn-secondary" id="clearBtn">
                             </form>
                         
                             <p class="pt-4" id="errorMsg" style="color:red;"></p>
