--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </nav>
                 <div class="header__title">
-                        <h1>THE BLOG</h1>
+                    <h1 id="header-title">THE BLOG</h1>
                 </div>
                 </div>
 
