Fixed GetElement errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="header__container container">
 
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container fixed-top py-3 px-4">
+                    <div class="container py-3 px-4">
                         <div class="navbar-brand userinfo">
                             <a href="#" class="userinfo__name hidden">Client name</a>
                             <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
