--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <div class="header__container container">
 
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container fixed-top py-3 px-4">
+                <div class="container py-3 px-4">
                     <div class="navbar-brand userinfo">
                         <a href="#" class="userinfo__name hidden">Client name</a>
                         <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
@@ -33,13 +33,13 @@
                     <div class="collapse navbar-collapse" id="navbarContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./index.html" tabindex="0">News</a>
+                                <a class="nav-link" aria-current="page" href="./index.html" tabindex="0">News</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./projects.html" tabindex="0">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./about.html" tabindex="0">About</a>
+                                <a class="nav-link active" href="./about.html" tabindex="0">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#" tabindex="0">Newsletter</a>
