--- a/post-detail.html
+++ b/post-detail.html
@@ -44,9 +44,6 @@
                                     <a class="nav-link" href="./about.html">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Newsletter</a>
-                                </li>
-                                <li class="nav-item">
                                     <div class="form-check form-switch">
                                         <input class="form-check-input" type="checkbox" id="darkmode-toggle">
                                         <label class="toggle-mode" for="darkmode-toggle">
@@ -214,11 +211,11 @@
         </main>
         
 
-        <footer class="footer bg-body py-4" id="footer">
+        <footer class="footer py-4" id="footer">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-auto">
-                        <span class="text-muted">© 2023 Sheri Nurislam</span>
+                        <span>© 2023 Sheri Nurislam</span>
                     </div>
                     <div class="col-auto">
                         <ul class="list-unstyled d-flex mb-0">
