--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html" tabindex="0">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" tabindex="0">Newsletter</a>
-                            </li>                                
+                            </li>                               
                             <li class="nav-item">
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" id="darkmode-toggle">
@@ -94,11 +91,11 @@
                 </div>
             </section>
         </main>
-        <footer class="footer bg-body py-4" id="footer">
+        <footer class="footer py-4" id="footer">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-auto">
-                        <span class="text-muted">© 2023 Sheri Nurislam</span>
+                        <span>© 2023 Sheri Nurislam</span>
                     </div>
                     <div class="col-auto">
                         <ul class="list-unstyled d-flex mb-0">
