--- a/post-detail.html
+++ b/post-detail.html
@@ -23,6 +23,7 @@
                         <div class="navbar-brand userinfo">
                             <a href="#" class="userinfo__name hidden">Client name</a>
                             <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
+                            <a href="./signin.html" class="userinfo__signin btn btn-dark">Sign in</a>
                         </div>
                 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
