--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <div class="navbar-brand userinfo">
                             <a href="#" class="userinfo__name hidden">Client name</a>
                             <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
+                            <a href="./signin.html" class="userinfo__signin btn btn-dark">Sign in</a>
                             <a href="#" class="userinfo__logout btn btn-dark hidden">Log out</a>
                         </div>
                 
