--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
                             <div class="navbar-brand userinfo">
                                 <a href="#" class="userinfo__name hidden">Client name</a>
                                 <a href="./login.html" class="userinfo__login btn btn-dark">Log in</a>
+                                <a href="./signin.html" class="userinfo__signin btn btn-dark">Sign in</a>
                                 <a href="#" class="userinfo__logout btn btn-dark hidden">Log out</a>
                             </div>
                     
@@ -114,6 +115,7 @@
     </div>
 
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
