--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <div class="col-12">
                                 <button type="button" class="btn btn-info filter-btn" data-filter="general">general</button>
                                 <button type="button" class="btn btn-info filter-btn" data-filter="sports">sports</button>
-                                <button type="button" class="btn btn-info filter-btn" data-filter="sports">business</button>
+                                <button type="button" class="btn btn-info filter-btn" data-filter="business">business</button>
                             </div>
                         </div>
 
