--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                         <img src="./img/recent1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <p class="card-text"><small class="text-body-secondary"><span class="content-author">Olivia Rhye</span> • <span class="content-date">1 Jan 2023</span></small></p>
-                                        <h5 class="card-title card-text-title">Card title</h5>
+                                        <h5 class="card-title card-text-title">Job Opportunities in the Tech Industry</h5>
                                         <p class="card-text card-text-subtitle mb-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         <a href="#footer" class="card-link post-badge">Leadership</a>
                                         <a href="#" class="card-link post-badge">Design</a>
@@ -94,7 +94,7 @@
                                         <div class="card-body">
                                             <!-- MARGIN TOP TO FIX -->
                                             <p class="card-text mt-xs-3"><small class="text-body-secondary"><span class="content-author">Olivia Rhye</span> • <span class="content-date">1 Jan 2023</span></small></p>
-                                            <h5 class="card-title card-text-title mb-2">Card title</h5>
+                                            <h5 class="card-title card-text-title mb-2">HR Management in the Digital Age</h5>
                                             <p class="card-text card-text-subtitle">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="#" class="card-link post-badge">Card link</a>
                                             <a href="#" class="card-link post-badge">Another link</a>
@@ -113,7 +113,7 @@
                                         <div class="card-body p-xs-5">
                                             <!-- MARGIN TOP TO FIX -->
                                             <p class="card-text mt-xs-5"><small class="text-body-secondary"><span class="content-author">Olivia Rhye</span> • <span class="content-date">1 Jan 2023</span></small></p>
-                                            <h5 class="card-title card-text-title mb-2">Card title</h5>
+                                            <h5 class="card-title card-text-title mb-2">Desktop Applications in the Modern Era</h5>
                                             <p class="card-text card-text-subtitle">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="#" class="card-link post-badge">Card link</a>
                                             <a href="#" class="card-link post-badge">Another link</a>
